Fix units list, inspections statuses, remove mock data

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "android:win": "powershell -NoProfile -ExecutionPolicy Bypass -File scripts/run-android.ps1",
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
