--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@notifee/react-native": "^9.1.8",
+    "@react-native-community/datetimepicker": "^8.5.1",
     "@react-native-community/push-notification-ios": "^1.12.0",
     "@react-native/new-app-screen": "0.83.0",
     "dotenv": "^17.2.3",
